--- a/app/assets/stylesheets/new_user.scss
+++ b/app/assets/stylesheets/new_user.scss
@@ -2,8 +2,98 @@
   display: flex;
   justify-content: center;
   height:128px;
-  &--right{
+  &__right{
     display: flex;
+    padding:40px 0 0 44px;
+    position: relative;
+    &__1{
+      font-size:12px;
+      font-weight: 600;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      color: #ea352d;
+      margin-right: 40px;
+      &::after{
+        content: "";
+        background-color:#ea352d;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 5px;
+        margin-top: 5px;
+        margin-left: 20px;
+      }
+    }
+    &__2{
+      font-size: 12px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      color: #888888;
+      margin-right: 40px;
+      &::before{
+        content: "";
+        display: inline-block;
+        width: 420px;
+        border-bottom: solid 2px #ccc;
+        position: absolute;
+        left: 74px;
+        bottom: 45%;
+      }
+      &::after{
+        content: "";
+        background-color:#ccc;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 5px;
+        margin-top: 5px;
+        margin-left: 32px;
+      }
+    }
+    &__3{
+      font-size: 12px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      color: #888888;
+      margin-right: 40px;
+      &::after{
+        content: "";
+        background-color:#ccc;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 5px;
+        margin-top: 5px;
+        margin-left: 43px;
+      }
+    }
+    &__4{
+      font-size: 12px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      color: #888888;
+      margin-right: 40px;
+      &::after{
+        content: "";
+        background-color:#ccc;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 5px;
+        margin-top: 5px;
+        margin-left: 25px;
+      }
+    }
+    &__5{
+      font-size: 12px;
+      font-weight: 400;
+      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+      color: #888888;
+      &::after{
+        content: "";
+        background-color:#ccc;
+        border-radius: 50%;
+        display: inline-block;
+        padding: 5px;
+        margin-top: 5px;
+        margin-left: 9px;
+      }
+    }
   }
 }
 
@@ -128,8 +218,22 @@
           display: flex;
           position: relative;
           &--1{
+            width: 100%;
             height: 48px;
             padding: 0 16px;
+            margin-right: 20px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            background: 0;
+            font-size: 16px;
+            line-height: 1.5;
+            cursor: pointer;
+          }
+          &--2{
+            width: 100%;
+            height: 48px;
+            padding: 0 16px;
+            margin-right: 30px;
             border-radius: 4px;
             border: 1px solid #ccc;
             background: 0;
@@ -139,7 +243,7 @@
           }
           &--down{
             position: absolute;
-            left: 10%;
+            left: 16%;
             top: 50%;
             z-index: 2;
             color: #888;
@@ -151,7 +255,7 @@
           }
           &--down2{
             position: absolute;
-            left: 27%;
+            left: 41%;
             top: 50%;
             z-index: 2;
             color: #888;
@@ -163,7 +267,7 @@
           }
           &--down3{
             position: absolute;
-            left: 44%;
+            left: 67%;
             top: 50%;
             z-index: 2;
             color: #888;
