add_signup_login
ログイン関連のビューの作成と変更

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -171,7 +171,8 @@
   color: white;
   font-size: 25px;
 }
-.fab.fa-facebook-square{
+
+#footer__facebook__icon{
   display: inline;
   font-style: normal;
   font-variant: normal;
