--- a/app/views/products/_footer.html.haml
+++ b/app/views/products/_footer.html.haml
@@ -16,7 +16,7 @@
         = link_to root_path, class:"footer__top__about__list__icon" do
           %i.fab.fa-twitter
         = link_to root_path, class:"footer__top__about__list__icon" do
-          %i.fab.fa-facebook-square
+          %i.fab.fa-facebook-square{id:"footer__facebook__icon"}
     .footer__top__help
       %h2.footer__top__help__text ヘルプ＆ガイド
       %ul.footer__top__help__list
