--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -39,7 +39,7 @@
 }
 
 @mixin any{
-  background-color:#ffffff;
+  background-color:#ccc;
   border-radius: 2px;
   margin: 0 0 0 8px;
   padding: 2px 4px;
