--- a/app/views/devise/registrations/new_cellphone.html.haml
+++ b/app/views/devise/registrations/new_cellphone.html.haml
@@ -2,6 +2,24 @@
 .exhibitcontent
 
   .exhibitcontent__header
+    .exhibitcontent__header--logo
+      = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"), root_path
+    %ul.exhibitcontent__header__right2
+      %li.exhibitcontent__header__right2__red
+        会員情報
+        .exhibitcontent__header__right2__red--line
+      %li.exhibitcontent__header__right2__red2
+        電話番号認証
+        .exhibitcontent__header__right2__red2--line2
+      %li.exhibitcontent__header__right2__3
+        お届け先住所入力
+        .exhibitcontent__header__right2__3--line3
+      %li.exhibitcontent__header__right2__4
+        支払い方法
+        .exhibitcontent__header__right2__4--line4
+      %li.exhibitcontent__header__right2__5
+        完了
+        .exhibitcontent__header__right2__5--line5
 
   .main
     %section.main__box
