--- a/app/assets/stylesheets/new_user.scss
+++ b/app/assets/stylesheets/new_user.scss
@@ -7,26 +7,16 @@
     padding:40px 0 0 44px;
     position: relative;
     &__1{
-      font-size:12px;
-      font-weight: 600;
-      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-      color: #ea352d;
+      @include font12_red;
       margin-right: 40px;
       &::after{
-        content: "";
-        background-color:#ea352d;
-        border-radius: 50%;
-        display: inline-block;
-        padding: 5px;
+        @include btn_red;
         margin-top: 5px;
         margin-left: 20px;
       }
     }
     &__2{
-      font-size: 12px;
-      font-weight: 400;
-      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-      color: #888888;
+      @include font12_gray;
       margin-right: 40px;
       &::before{
         content: "";
@@ -38,58 +28,33 @@
         bottom: 45%;
       }
       &::after{
-        content: "";
-        background-color:#ccc;
-        border-radius: 50%;
-        display: inline-block;
-        padding: 5px;
+        @include btn_gray;
         margin-top: 5px;
         margin-left: 32px;
       }
     }
     &__3{
-      font-size: 12px;
-      font-weight: 400;
-      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-      color: #888888;
+      @include font12_gray;
       margin-right: 40px;
       &::after{
-        content: "";
-        background-color:#ccc;
-        border-radius: 50%;
-        display: inline-block;
-        padding: 5px;
+        @include btn_gray;
         margin-top: 5px;
         margin-left: 43px;
       }
     }
     &__4{
-      font-size: 12px;
-      font-weight: 400;
-      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-      color: #888888;
+      @include font12_gray;
       margin-right: 40px;
       &::after{
-        content: "";
-        background-color:#ccc;
-        border-radius: 50%;
-        display: inline-block;
-        padding: 5px;
+        @include btn_gray;
         margin-top: 5px;
         margin-left: 25px;
       }
     }
     &__5{
-      font-size: 12px;
-      font-weight: 400;
-      font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-      color: #888888;
+      @include font12_gray;
       &::after{
-        content: "";
-        background-color:#ccc;
-        border-radius: 50%;
-        display: inline-block;
-        padding: 5px;
+        @include btn_gray;
         margin-top: 5px;
         margin-left: 9px;
       }
@@ -100,10 +65,10 @@
 .member_main{
   margin: 0 300px;
   &--title{
+    @include font__title;
     background-color: #FFFFFF;
     padding: 32px;
     font-size: 22px;
-    @include font__title;
     text-align:center;
   }
   &__content{
@@ -123,27 +88,21 @@
         }
       }
       &--input{
-        height: 48px;
-        width: 100%;
+        @include input;
         padding: 10px 16px 8px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-        background: #fff;
-        line-height: 1.5;
-        font-size: 16px;
         margin-top: 8px;
         margin-bottom: 32px;
+        &:focus{
+          @include input_focus;
+        }
       }
       &--input2{
-        height: 48px;
-        width: 100%;
+        @include input;
         padding: 10px 16px 8px;
-        border-radius: 4px;
-        border: 1px solid #ccc;
-        background: #fff;
-        line-height: 1.5;
-        font-size: 16px;
         margin-top: 8px;
+        &:focus{
+          @include input_focus;
+        }
       }
       &--middle{
         font-size: 14px;
@@ -181,25 +140,21 @@
         &__from{
           display: flex;
           &--1{
-            height: 48px;
+            @include input;
             padding: 10px 16px 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background: #fff;
-            line-height: 1.5;
-            font-size: 16px;
             margin-top: 8px;
             margin-right: 8px;
+            &:focus{
+              @include input_focus;
+            }
           }
           &--2{
-            height: 48px;
+            @include input;
             padding: 10px 16px 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background: #fff;
-            line-height: 1.5;
-            font-size: 16px;
             margin-top: 8px;
+            &:focus{
+              @include input_focus;
+            }
           }
         }
       }
@@ -218,28 +173,22 @@
           display: flex;
           position: relative;
           &--1{
-            width: 100%;
-            height: 48px;
+            @include input;
+            cursor: pointer;
             padding: 0 16px;
             margin-right: 20px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background: 0;
-            font-size: 16px;
-            line-height: 1.5;
-            cursor: pointer;
+            &:focus{
+              @include input_focus;
+            }
           }
           &--2{
-            width: 100%;
-            height: 48px;
+            @include input;
+            cursor: pointer;
             padding: 0 16px;
             margin-right: 30px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            background: 0;
-            font-size: 16px;
-            line-height: 1.5;
-            cursor: pointer;
+            &:focus{
+              @include input_focus;
+            }
           }
           &--down{
             position: absolute;
@@ -255,7 +204,7 @@
           }
           &--down2{
             position: absolute;
-            left: 41%;
+            left: 45%;
             top: 50%;
             z-index: 2;
             color: #888;
@@ -267,7 +216,7 @@
           }
           &--down3{
             position: absolute;
-            left: 67%;
+            left: 73%;
             top: 50%;
             z-index: 2;
             color: #888;
