--- a/app/assets/stylesheets/new_address.scss
+++ b/app/assets/stylesheets/new_address.scss
@@ -2,17 +2,17 @@
   display: flex;
   justify-content: center;
   height:128px;
-  &__right{
+  &__right3{
     display: flex;
     padding:40px 0 0 44px;
     position: relative;
     &__red{
-      @include font12_red;
+      @include font12_gray;
       margin-right: 40px;
       &::before{
         content: "";
         display: inline-block;
-        width: 250px;
+        width: 220px;
         border-bottom: solid 2px #ea352d;
         position: absolute;
         left: 74px;
@@ -24,6 +24,24 @@
         margin-left: 20px;
       }
     }
+    &__red2{
+      @include font12_gray;
+      margin-right: 40px;
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 32px;
+      }
+    }
+    &__red3{
+      @include font12_red;
+      margin-right: 40px;
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 45px;
+      }
+    }
     &__4{
       @include font12_gray;
       margin-right: 40px;
@@ -31,16 +49,16 @@
       &::before{
         content: "";
         display: inline-block;
-        width: 220px;
+        width: 200px;
         border-bottom: solid 2px #ccc;
         position: absolute;
-        left: -106px;
+        left: -81px;
         top: 32%;
       }
       &::after{
         @include btn_gray;
         margin-top: 5px;
-        margin-left: 43px;
+        margin-left: 25px;
       }
     }
     &__5{
