--- a/app/assets/stylesheets/new_credit_card.scss
+++ b/app/assets/stylesheets/new_credit_card.scss
@@ -1,3 +1,100 @@
+.exhibitcontent__header{
+  display: flex;
+  justify-content: center;
+  height:128px;
+  &__right4{
+    display: flex;
+    padding:40px 0 0 44px;
+    position: relative;
+    &__red{
+      @include font12_gray;
+      margin-right: 40px;
+      &::before{
+        content: "";
+        display: inline-block;
+        width: 200px;
+        border-bottom: solid 2px #ea352d;
+        position: absolute;
+        left: 80px;
+        bottom: 45%;
+      }
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 20px;
+      }
+    }
+
+    &__red2{
+    @include font12_gray;
+      margin-right: 40px;
+      &::before{
+        content: "";
+        display: inline-block;
+        width: 80px;
+        border-bottom: solid 2px #ea352d;
+        position: absolute;
+        left: 74px;
+        bottom: 45%;
+      }
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 31px;
+      }
+    }
+
+    &__red3{
+      @include font12_gray;
+      margin-right: 40px;
+      position: relative;
+      &::before{
+        content: "";
+        display: inline-block;
+        width: 235px;
+        border-bottom: solid 2px #ea352d;
+        position: absolute;
+        left: -71px;
+        top: 32%;
+      }
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 43px;
+      }
+    }
+
+    &__red4{
+      @include font12_red;
+      margin-right: 40px;
+      &::after{
+        @include btn_red;
+        margin-top: 5px;
+        margin-left: 25px;
+      }
+    }
+    
+    &__5{
+      @include font12_gray;
+      position: relative;
+      &::before{
+        content: "";
+        display: inline-block;
+        width: 75px;
+        border-bottom: solid 2px #ccc;
+        position: absolute;
+        left: -65px;
+        top: 32%;
+      }
+      &::after{
+        @include btn_gray;
+        margin-top: 5px;
+        margin-left: 9px;
+      }
+    }
+  }
+}
+
 .cmain{
   
   width: 700px;
@@ -32,16 +129,13 @@
           }
         }
         &__input{
-          width: 100%;
-          margin: 8px 0 0;
-          height: 48px;
-          padding: 10px 16px 8px;
-          border-radius: 4px;
-          border: 1px solid #ccc;
-          background-color: #fff;
-          font-size: 16px;
-          line-height: 1.5;
+          @include input;
           display: block;
+          padding: 10px 16px 8px;
+          margin: 8px 0 0;
+          &:focus{
+            @include input_focus;
+          }
         }
         &__btn{
           margin-top: 32px;
@@ -72,53 +166,77 @@
         max-width: 343px;
         margin: 0 auto;
       
-        &__form{
-          display: block;
-          margin-top: 5px;
-          width: 100px;
-          height: 30px;
-          background-color: white;
-          &__month{
-            float: right;
-            padding-bottom: 20px;
-          }
-        }
         &__list{
           display: flex;
           &__must{
             @include required;
           }
         }
+
         &__month{
           display: flex;
           position: relative;
+          &--form{
+            height: 48px;
+            width: 100px;
+            display: block;
+            padding-left: 10px;
+            margin-top: 5px;
+            background-color: white;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            &:focus{
+              @include input_focus;
+            }
+          }
           &__icon{
             position: absolute;
             font-size: 20px;
-            top: 10px;
-            left: 82px;
+            top: 40%;
+            left: 75px;
             z-index: 3;
             background-color: white;
           }
           &__text{
             padding-left: 8px;
-            padding-top: 8px;
+            padding-top: 20px;
           }
         }
         &__year{
           position: relative;
           display: flex;
+          &--form{
+            height: 48px;
+            width: 100px;
+            display: block;
+            padding-left: 10px;
+            margin-top: 5px;
+            background-color: white;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            font-size: 16px;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            &:focus{
+              @include input_focus;
+            }
+          }
           &__icon{
             position: absolute;
             font-size: 20px;
-            top: 8px;
-            left: 82px;
+            top: 40%;
+            left: 75px;
             z-index: 3;
             background-color: white;
           }
           &__text{
             padding-left: 8px;
-            padding-top: 8px;
+            padding-top: 20px;
           }
         }
       }
@@ -150,7 +268,6 @@
         }
       }
       &__btn{
-        border-radius: 4px;
         display: block;
         margin: 32px auto;
         width: 343px;
@@ -161,6 +278,7 @@
         transition: all ease-out .3s;
         cursor: pointer;
         color: white;
+        border: solid 1px red;
         &__inside{
           text-align: center;
           align-items: center;
