--- a/app/assets/stylesheets/new_cellphone.scss
+++ b/app/assets/stylesheets/new_cellphone.scss
@@ -13,6 +13,7 @@
         content: "";
         display: inline-block;
         width: 200px;
+        border-bottom: solid 2px #ea352d;
         position: absolute;
         left: 80px;
         bottom: 45%;
