--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -3,7 +3,7 @@
   box-sizing: border-box;
   list-style: none;
 }
-.main{
+.amain{
   min-height: 100vh;
   background-color:rgb(245, 245, 245) ;
   .imain {
@@ -61,19 +61,18 @@
                 width: 100%;
                 height: 750px;
                 color: white;
-                &__app{
-                  &__image{
-                    position: absolute;
-                    height: 100px;
-                    width: 300px;
-                    left: -290px;
-                    top: -130px;
-                    display: flex;
-                    &__appstore1{
-                    }
-                    &__appstore2{
-                    }
-                  }
+              }
+              &__app{
+                position: relative;
+                height: 1000px;
+                width: 100%;
+                left: 260px;
+                top: -100px;
+                display: flex;
+                &__appstore{
+                }
+                &__googlestore{
+                  margin-left: 8px;
                 }
               }
             }
