--- a/app/assets/stylesheets/new_user.scss
+++ b/app/assets/stylesheets/new_user.scss
@@ -192,7 +192,7 @@
           }
           &--down{
             position: absolute;
-            left: 16%;
+            left: 60px;
             top: 50%;
             z-index: 2;
             color: #888;
@@ -204,7 +204,7 @@
           }
           &--down2{
             position: absolute;
-            left: 45%;
+            left: 160px;
             top: 50%;
             z-index: 2;
             color: #888;
@@ -216,7 +216,7 @@
           }
           &--down3{
             position: absolute;
-            left: 73%;
+            left: 260px;
             top: 50%;
             z-index: 2;
             color: #888;
