--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -10,7 +10,7 @@
             %li
               = image_tag "6cbf10cdf0a7a15ce0c0615f66a499bb_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
             %li
-              = image_tag "https://mail.google.com/mail/u/0?ui=2&ik=33ce5707ad&attid=0.1&permmsgid=msg-f:1653688456250162859&th=16f314e3abf47eab&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ_gcfNksvXJz7L0FKeATDoH-563flltkXmkRymdoqxwBaSRoNXiD7egaE2W0SaNY0hd4sPyApwn-Hib0wjklCwcX-_iaBe3M2GSUSIn1Mg4HO7elw70AgPl0SQ&disp=emb&realattid=16f314d8a1f49b7262f1",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
+              = image_tag "0782e7874d8a44fff2875158ba68839e_m.jpg",class: "imain__main__link__image__ulist__gazo",id: "gazo1"
               .imain__main__link__image__ulist__text
                 .imain__main__link__image__ulist__text__1
                   スマホで簡単
