--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -48,7 +48,7 @@
                 font-weight: 600;
                 line-height: 1.4;
                 margin-bottom: 16px;
-                color: white;
+                color: black;
               }
               &__2{
                 position: absolute;
@@ -60,7 +60,7 @@
                 left: -290px;
                 width: 100%;
                 height: 750px;
-                color: white;
+                color: black;
               }
               &__app{
                 position: relative;
