--- a/app/views/products/_banner.html.haml
+++ b/app/views/products/_banner.html.haml
@@ -9,4 +9,4 @@
       = link_to image_tag('https://web-jp-assets.mercdn.net/_next/static/images/app-store-a5c17948c6fd6d5b60b13d421cd60b35.svg',size:"144x40",class:"banner__left__logo--2"), '#'
       = link_to image_tag('https://web-jp-assets.mercdn.net/_next/static/images/google-play-495575abb895b405aa6336b2a4304958.svg',size:"144x40",class:"banner__left__logo--3"), '#'
   .banner__right
-    = image_tag 'https://mail.google.com/mail/u/0?ui=2&ik=33ce5707ad&attid=0.1&permmsgid=msg-f:1653703521550844673&th=16f3229755d9c301&view=fimg&sz=s0-l75-ft&attbid=ANGjdJ90nAgGut8-XwGN82C-JAB45EwWZUYba-uZalNwD8YdOliofHjiuZyUK3wJD6u-CqRuBhTja5ZdeMglx4xif13CyI_kQMzPaIIpKa3W93mP_udOhaQU8SM25a8&disp=emb&realattid=16f32292aefadfd3a301',size:"300x260",class:"banner__right--image"
+    = image_tag '515366b4a487b01050925315ff07406c_s.jpg',size:"300x260",class:"banner__right--image"
