--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,7 +1,7 @@
 .exhibitcontent
   = render "show_header"
   
-  .exhibitcontent_main
+  = form_with model: @product,class:"exhibitcontent_main", local: true do |f|
     .exhibitcontent_main__title
       商品の情報を入力
     .exhibitcontent_main__first
@@ -45,17 +45,15 @@
             カテゴリー
           .exhibitcontent_main__third__right__top--required4
             必須
-        = form_with model: @product, local: true do |f|
-          = f.select :category, [["---", 0],["レディース", 1],["メンズ", 2],["ベビー・キッズ",3],[" インテリア・住まい・小物",4],["本・音楽・ゲーム",5],["おもちゃ・ホビー・グッズ",6],["コスメ・香水・美容",7],["家電・スマホ・カメラ",8],["スポーツ・レジャー",9],["ハンドメイド",10],["チケット",11],["自動車・オートバイ",12],["その他",13]]
-          = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon"
+        = f.select :category, [["---", 0],["レディース", 1],["メンズ", 2],["ベビー・キッズ",3],[" インテリア・住まい・小物",4],["本・音楽・ゲーム",5],["おもちゃ・ホビー・グッズ",6],["コスメ・香水・美容",7],["家電・スマホ・カメラ",8],["スポーツ・レジャー",9],["ハンドメイド",10],["チケット",11],["自動車・オートバイ",12],["その他",13]]
+        = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon"
         .exhibitcontent_main__third__right__bottom
           .exhibitcontent_main__third__right__bottom--status 
             商品の状態
           .exhibitcontent_main__third__right__bottom--required5
             必須
-        = form_with model: @product, local: true do |f|
-          = f.select :condition, [["---", 0],["新品、未使用", 1],["未使用に近い", 2],["目立った傷や汚れなし",3],[" やや傷や汚れあり",4],["汚れや傷あり",5],["全体的に状態が悪い",6]]
-          = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon2"
+        = f.select :condition, [["---", 0],["新品、未使用", 1],["未使用に近い", 2],["目立った傷や汚れなし",3],[" やや傷や汚れあり",4],["汚れや傷あり",5],["全体的に状態が悪い",6]]
+        = icon 'fa', 'chevron-down', class: "exhibitcontent_main__third__right--icon2"
     .exhibitcontent_main__fourth
       .exhibitcontent_main__fourth__left
         .exhibitcontent_main__fourth__left--shipping
@@ -67,25 +65,22 @@
             配達料の負担
           .exhibitcontent_main__fourth__right__top--required6
             必須
-        = form_with model: @product, local: true do |f|
-          = f.select :charge, [["---", 0],["送料込み（出品者負担）", 1],["着払い（購入者負担）", 2]]
-          = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon3"
+        = f.select :charge, [["---", 0],["送料込み（出品者負担）", 1],["着払い（購入者負担）", 2]]
+        = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon3"
         .exhibitcontent_main__fourth__right__middle
           .exhibitcontent_main__fourth__right__middle--region
             発送元の地域
           .exhibitcontent_main__fourth__right__middle--required7
             必須
-        = form_with model: @product, local: true do |f|
-          = f.collection_select :prefecture_id, Prefecture.all, :id, :name
-          = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon4"
+        = f.collection_select :prefecture_id, Prefecture.all, :id, :name
+        = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon4"
         .exhibitcontent_main__fourth__right__bottom
           .exhibitcontent_main__fourth__right__bottom--days
             発送までの日数
           .exhibitcontent_main__fourth__right__bottom--required8
             必須
-        = form_with model: @product, local: true do |f|
-          = f.select :day, [["---", 0],["１〜2日で発送", 1],["２〜3日で発送", 2],["４〜7日で発送", 3]]
-          = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon5"
+        = f.select :day, [["---", 0],["１〜2日で発送", 1],["２〜3日で発送", 2],["４〜7日で発送", 3]]
+        = icon 'fa', 'chevron-down', class: "exhibitcontent_main__fourth__right--icon5"
     
     .exhibitcontent_main__fifth
       .exhibitcontent_main__fifth__left
@@ -102,16 +97,13 @@
           .exhibitcontent_main__fifth__right__top__right
             .exhibitcontent_main__fifth__right__top__right--1
               ¥
-            = form_with model: @product, local: true do |f|
-              = f.text_field :price, id: "price",placeholder: '例) 300',class:"exhibitcontent_main__fifth__right--input"
+            = f.text_field :price, id: "price",placeholder: '例) 300',class:"exhibitcontent_main__fifth__right--input"
         .exhibitcontent_main__fifth__right--middle 
           販売手数料(10％)
-          = form_with model: @product, local: true do |f|
-            = f.text_field :fee, id: "fee",value:"-",readonly: true,class:"exhibitcontent_main__fifth__right--input2"
+          = f.text_field :fee, id: "fee",value:"-",readonly: true,class:"exhibitcontent_main__fifth__right--input2"
         .exhibitcontent_main__fifth__right--bottom
           販売利益
-          = form_with model: @product, local: true do |f|
-            = f.text_field :profit, id: "profit",value:"-",readonly: true,class:"exhibitcontent_main__fifth__right--input3"
+          = f.text_field :profit, id: "profit",value:"-",readonly: true,class:"exhibitcontent_main__fifth__right--input3"
     .exhibitcontent_main__sixth
       .exhibitcontent_main__sixth__important
         = link_to "禁止されている出品","#",class: 'exhibitcontent_main__sixth__important--btn'
@@ -126,8 +118,7 @@
         また、出品をもちまして
         = link_to "加盟店規約","#",class: 'exhibitcontent_main__sixth__important--btn'
         に同意したことになります。
-      = form_with model: @product, local: true do |f|
-        = f.submit '出品する', class: 'exhibitcontent_main__sixth--submit'
+      = f.submit '出品する', class: 'exhibitcontent_main__sixth--submit'
       = link_to "もどる","#",class: 'exhibitcontent_main__sixth--back'
   
   .exhibitcontent_down
