--- a/app/assets/stylesheets/user_page.scss
+++ b/app/assets/stylesheets/user_page.scss
@@ -3,7 +3,7 @@
   width: 700px;
   &__user {
     height: 200px;
-    background-image: url(mypage-background.png);
+    background-image: url(mypage-background.jpg);
     background-size:cover;        
     position: relative;
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
