--- a/app/assets/stylesheets/user_profile_edit.scss
+++ b/app/assets/stylesheets/user_profile_edit.scss
@@ -12,7 +12,7 @@
   &__icon {
     display: flex;
     justify-content: center;
-    background-image: url(mypage-background.png);
+    background-image: url(mypage-background.jpg);
     background-size: cover;
     padding: 72px 16px 24px;
     &__figure {
