--- a/app/views/devise/registrations/new_credit_card.html.haml
+++ b/app/views/devise/registrations/new_credit_card.html.haml
@@ -23,12 +23,12 @@
   .cmain
     %section.cmain__box
       %h2.cmain__box__upper 支払い方法
-      = form_with model: @credit_card ,url: {controller: 'registrations', action: 'create_credit_card' }, class: "cmain__box__form",local:true do |f|
+      = form_with model: @credit_card ,url: {controller: 'registrations', action: 'create_credit_card' },method: post, class: "cmain__box__form",local:true do |f|
         .cmain__box__form__blank
           .cmain__box__form__blank__list
             %label.cmain__box__form__blank__list__label カード番号
             .cmain__box__form__blank__list__must 必須
-          %input.cmain__box__form__blank__input{placeholder:"半角数字のみ"}
+          %input.cmain__box__form__blank__input{placeholder:"半角数字のみ",id: "card_number"}
           .credit__card__icon
             %i.fab.fa-cc-visa
             %i.fab.fa-cc-mastercard
@@ -42,26 +42,26 @@
             %label.cmain__box__form__limit__list__label 有効期限
             .cmain__box__form__limit__list__must 必須
           .cmain__box__form__limit__month
-            = f.select :month, [["01", 0],["02", 1],["03", 2],["04",3],["05",4],["06",5],["07",6],["08",7],["09",8],["10",9],["11",10],["12",11]],{},{class:"cmain__box__form__limit__month--form"}
+            = f.select :month, [["01", 0],["02", 1],["03", 2],["04",3],["05",4],["06",5],["07",6],["08",7],["09",8],["10",9],["11",10],["12",11]],{},{class:"cmain__box__form__limit__month--form",id:"exp_month"}
             = icon 'fa', 'chevron-down', class:"cmain__box__form__limit__month__icon"
             .cmain__box__form__limit__month__text 月
           .cmain__box__form__limit__year
-            = f.select :year, [["19", 0],["20", 1],["21", 2],["22",3],["23",4],["24",5],["25",6],["26",7],["27",8]],{},{class:"cmain__box__form__limit__year--form"}
+            = f.select :year, [["19", 0],["20", 1],["21", 2],["22",3],["23",4],["24",5],["25",6],["26",7],["27",8]],{},{class:"cmain__box__form__limit__year--form",id:"exp_year"}
             = icon 'fa', 'chevron-down', class:"cmain__box__form__limit__year__icon"
             .cmain__box__form__limit__year__text 年
         .cmain__box__form__sequrity
           .cmain__box__form__sequrity__list
             %label.cmain__box__form__sequrity__list__label セキュリティコード
             .cmain__box__form__sequrity__list__must 必須
-          %input.cmain__box__form__blank__input{placeholder:"カード背面4桁もしくは3桁の番号"}
+          %input.cmain__box__form__blank__input{placeholder:"カード背面4桁もしくは3桁の番号",id:"cvc"}
           .cmain__box__form__sequrity__blue
             %i.fas.fa-question-circle
             .cmain__box__form__sequrity__blue__text
               カード裏面の番号とは？
-        
         %button.cmain__box__form__btn
-          .cmain__box__form__btn__inside
-            次へ進む
+          -# .cmain__box__form__btn__inside
+          -#   次へ進む
+          = submit_tag "追加する", class: "cmain__box__form__btn__inside", id: "token_submit", type: 'button'
 
 
   .exhibitcontent_down
