--- a/app/views/products/_new_header.html.haml
+++ b/app/views/products/_new_header.html.haml
@@ -1,3 +1,5 @@
+-# ログイン前のヘッダー
+
 .mheader
   .mheader__main
     .mheader__main__upper
@@ -1159,30 +1161,10 @@
 
           = link_to root_path, class:"mheader__main__bottom__right__list__good" do
 
-            %i.far.fa-heart
-
-              .icon-text__right いいね一覧
+            .icon-text__right 新規会員登録
 
         %li.mheader__main__bottom__right__list
 
           = link_to root_path, class:"mheader__main__bottom__right__list__good" do
 
-            %i.far.fa-bell
-
-              .icon-text__right お知らせ
-
-        %li.mheader__main__bottom__right__list
-
-          = link_to root_path, class:"mheader__main__bottom__right__list__good" do
-
-            %i.fas.fa-check
-
-              .icon-text__right やることリスト
-
-        %li.mheader__main__bottom__right__list
-
-          = link_to root_path, class:"mheader__main__bottom__right__list__good" do
-
-            %i.far.fa-grin-stars
-
-              .icon-text__right マイページ
+            .icon-text__right ログイン
