--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -244,3 +244,12 @@
   font-size: 20px;
 }
 
+@mixin font14_u4{
+  line-height: 14px;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+
+  
+}
+
