--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "slick-theme";
 @import "footer";
 @import "header";
+@import "new_header";
 @import "index";
 @import "new";
 @import "banner";
