--- a/app/views/products/_new_header.html.haml
+++ b/app/views/products/_new_header.html.haml
@@ -1157,14 +1157,14 @@
 
       %ul.mheader__main__bottom__right
 
-        %li.mheader__main__bottom__right__list
+        %li.mheader__main__bottom__right__list1
 
-          = link_to root_path, class:"mheader__main__bottom__right__list__good" do
+          = link_to root_path, class:"mheader__main__bottom__right__list1__good1" do
 
-            .icon-text__right 新規会員登録
+            新規会員登録
 
-        %li.mheader__main__bottom__right__list
+        %li.mheader__main__bottom__right__list2
 
-          = link_to root_path, class:"mheader__main__bottom__right__list__good" do
+          = link_to root_path, class:"mheader__main__bottom__right__list2__good2" do
 
-            .icon-text__right ログイン
+            ログイン
