--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -74,6 +74,7 @@
         display: flex;
         margin-left: -3px;
         &__category{
+          margin-right: 15px;
           &:hover + .mheader__main__bottom__left__category__submenu{
             display: block;
           }
